@@ -8,8 +8,10 @@ import com.github.dockerjava.api.model.PortBinding;
 import com.github.dockerjava.api.model.Ports;
 import com.github.tomakehurst.wiremock.client.WireMock;
 import com.google.common.collect.Lists;
+import jakarta.inject.Inject;
 import lombok.extern.slf4j.Slf4j;
 import org.assertj.core.api.Assertions;
+import org.elasticsearch.index.query.BoolQueryBuilder;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
@@ -35,7 +37,6 @@ import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilder;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.springframework.web.context.WebApplicationContext;
-import org.testcontainers.containers.wait.strategy.LogMessageWaitStrategy;
 import org.testcontainers.containers.wait.strategy.Wait;
 import org.testcontainers.elasticsearch.ElasticsearchContainer;
 import uk.gov.hmcts.ccd.data.casedetails.SecurityClassification;
@@ -55,7 +56,6 @@ import uk.gov.hmcts.ccd.endpoint.std.GlobalSearchEndpoint;
 import uk.gov.hmcts.ccd.test.ElasticsearchTestHelper;
 import uk.gov.hmcts.ccd.v2.internal.resource.CaseSearchResultViewResource;
 
-import jakarta.inject.Inject;
 import java.io.IOException;
 import java.time.Duration;
 import java.util.ArrayList;
@@ -75,7 +75,9 @@ import static org.hamcrest.CoreMatchers.hasItem;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.CoreMatchers.nullValue;
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.greaterThanOrEqualTo;
 import static org.hamcrest.Matchers.hasProperty;
+import static org.hamcrest.Matchers.not;
 import static org.hamcrest.Matchers.startsWith;
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.mockito.Mockito.doReturn;
@@ -119,6 +121,7 @@ import static uk.gov.hmcts.ccd.test.ElasticsearchTestHelper.COUNTY_FIELD;
 import static uk.gov.hmcts.ccd.test.ElasticsearchTestHelper.COUNTY_VALUE;
 import static uk.gov.hmcts.ccd.test.ElasticsearchTestHelper.CREATED_DATE;
 import static uk.gov.hmcts.ccd.test.ElasticsearchTestHelper.CREATED_DATE_VALUE;
+import static uk.gov.hmcts.ccd.test.ElasticsearchTestHelper.CREATED_DATE_VALUE_GLOBAL;
 import static uk.gov.hmcts.ccd.test.ElasticsearchTestHelper.DATE_FIELD;
 import static uk.gov.hmcts.ccd.test.ElasticsearchTestHelper.DATE_TIME_FIELD;
 import static uk.gov.hmcts.ccd.test.ElasticsearchTestHelper.DATE_TIME_VALUE;
@@ -182,6 +185,9 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
     private static final String REFERENCE_GLOBAL_SEARCH_02 = "2222333344441111";
     private static final String REFERENCE_GLOBAL_SEARCH_03 = "3333444411112222";
     private static final String REFERENCE_GLOBAL_SEARCH_04 = "4444111122223333";
+    private static final String REFERENCE_GLOBAL_SEARCH_05 = "1999866820969999";
+    private static final String REFERENCE_GLOBAL_SEARCH_06 = "1999866820970009";
+    private static final Long GLOBAL_DOCS_SIZE = 1000L;
 
     @Inject
     private WebApplicationContext wac;
@@ -197,32 +203,41 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
     private static ElasticsearchContainer container;
 
+    private static final BoolQueryBuilder baseQuery = boolQuery()
+        .must(matchQuery(caseData(NUMBER_FIELD), NUMBER_VALUE)) // ES Double
+        .must(matchQuery(caseData(YES_OR_NO_FIELD), YES_OR_NO_VALUE)) // ES Keyword
+        .must(matchQuery(caseData(TEXT_FIELD), TEXT_VALUE)) // ES Text
+        .must(matchQuery(caseData(DATE_FIELD), DATE_VALUE)) // ES Date
+        .must(matchQuery(caseData(PHONE_FIELD), PHONE_VALUE)) // ES Phone
+        .must(matchQuery(caseData(COUNTRY_FIELD), ElasticsearchTestHelper.COUNTRY_VALUE)) // Complex
+        .must(matchQuery(caseData(COLLECTION_FIELD) + VALUE_SUFFIX, COLLECTION_VALUE)) // Collection
+        .must(matchQuery(STATE, STATE_VALUE));
+
     private MockMvc mockMvc;
 
     @BeforeAll
     public static void initElastic(@Value("${search.elastic.version}") final String elasticVersion,
                                    @Value("${search.elastic.port}") final int httpPortValue)
-        throws IOException, InterruptedException {
+        throws IOException {
 
         log.info("Starting Elastic search...");
         container = new ElasticsearchContainer("docker.elastic.co/elasticsearch/elasticsearch:" + elasticVersion)
             .withEnv("discovery.type", "single-node")
+            .withEnv("ES_JAVA_OPTS", "-Xms256m -Xmx256m")
             .withExposedPorts(9200)
             .withCreateContainerCmdModifier(cmd -> cmd.withHostConfig(
                 new HostConfig().withPortBindings(
                     new PortBinding(Ports.Binding.bindPort(httpPortValue), new ExposedPort(9200))
                 )
             ))
-            .waitingFor(Wait.forLogMessage(".Started Application.", 1));
 
-        String regex = ".*(\"message\":\\s?\"started\".*|] started\n$)";
-        container.setWaitStrategy((new LogMessageWaitStrategy())
-            .withRegEx(regex)
-            .withStartupTimeout(Duration.ofMinutes(3))
-        );
+            .withEnv("xpack.security.enabled", "false")
+            .waitingFor(Wait.forHttp("/_cluster/health")
+                .forStatusCode(200)
+                .withStartupTimeout(Duration.ofMinutes(1)));
 
         container.start();
-        log.info("Elastic search started.");
+        log.info("Elastic search {} started.", elasticVersion);
         ElasticsearchITSetup configurer = new ElasticsearchITSetup(httpPortValue);
         log.info("Elastic search adding indexes.");
         configurer.initIndexes();
@@ -271,26 +286,201 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
         @Test
         void shouldReturnAllCaseDetailsForDefaultUseCase() throws Exception {
             ElasticsearchTestRequest searchRequest = ElasticsearchTestRequest.builder()
-                .query(boolQuery()
-                    .must(matchQuery(caseData(NUMBER_FIELD), NUMBER_VALUE)) // ES Double
-                    .must(matchQuery(caseData(YES_OR_NO_FIELD), YES_OR_NO_VALUE)) // ES Keyword
-                    .must(matchQuery(caseData(TEXT_FIELD), TEXT_VALUE)) // ES Text
-                    .must(matchQuery(caseData(DATE_FIELD), DATE_VALUE)) // ES Date
-                    .must(matchQuery(caseData(PHONE_FIELD), PHONE_VALUE)) // ES Phone
-                    .must(matchQuery(caseData(COUNTRY_FIELD), ElasticsearchTestHelper.COUNTRY_VALUE)) // Complex
-                    .must(matchQuery(caseData(COLLECTION_FIELD) + VALUE_SUFFIX, COLLECTION_VALUE)) // Collection
-                    .must(matchQuery(STATE, STATE_VALUE))) // Metadata
+                .query(baseQuery)
                 .build();
 
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
-                null);
+                null, false);
 
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
                 () -> assertThat(caseSearchResultViewResource.getCases().size(), is(1)),
                 () -> assertExampleCaseData(caseDetails.getFields(), false),
                 () -> assertExampleCaseMetadata(caseDetails.getFields(), false)
+            );
+        }
+
+        private Long getCasesTotal() throws Exception  {
+            ElasticsearchTestRequest totalRequest = ElasticsearchTestRequest.builder()
+                .query(baseQuery)
+                .size(0)
+                .build();
+            CaseSearchResultViewResource totalResult = executeRequest(totalRequest, CASE_TYPE_A, null, true);
+            return totalResult.getTotal();
+        }
+
+        @Test
+        void shouldReturnFirstPageCaseDetailsForDefaultUseCaseFromGlobalIndex() throws Exception {
+            final int PAGE_SIZE = 10;
+            long total = 1000L;
+
+            ElasticsearchTestRequest searchRequest = ElasticsearchTestRequest.builder()
+                .query(baseQuery)
+                .size(PAGE_SIZE)
+                .sort("reference.keyword")
+                .build();
+
+            CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
+                null, true);
+
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
+            final long caseIdStarting = 1999866820969999L;
+            assertAll(
+                () -> assertThat(caseSearchResultViewResource.getTotal(), is(total)),
+                () -> assertThat(caseSearchResultViewResource.getCases().size(), is(PAGE_SIZE)),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getCaseId(),
+                    is(Long.toString(caseIdStarting))),
+                () -> assertThat(caseSearchResultViewResource.getCases().get(1).getCaseId(),
+                    is(Long.toString(caseIdStarting + 1))),
+                () -> assertThat(caseSearchResultViewResource.getCases().get(9).getCaseId(),
+                    is(Long.toString(caseIdStarting + 9))),
+                () -> assertNewGlobalCaseData(caseDetails.getFields()),
+                () -> assertNewGlobalCaseMetadata(caseDetails.getFields())
+            );
+        }
+
+        @Test
+        void shouldReturnNextPage20CaseDetailsForDefaultUseCaseFromGlobalIndex() throws Exception {
+            final int PAGE_FROM = 10;
+            final int PAGE_SIZE = 20;
+
+            long total = 1000L;
+
+            ElasticsearchTestRequest searchRequest = ElasticsearchTestRequest.builder()
+                .query(baseQuery)
+                .from(PAGE_FROM)
+                .size(PAGE_SIZE)
+                .sort("reference.keyword")
+                .build();
+
+            CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
+                null, true);
+
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
+            final long caseIdStarting = 1999866820970009L;
+            assertAll(
+                () -> assertThat(caseSearchResultViewResource.getTotal(), is(total)),
+                () -> assertThat(caseSearchResultViewResource.getCases().size(), is(PAGE_SIZE)),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getCaseId(),
+                    is(Long.toString(caseIdStarting))),
+                () -> assertThat(caseSearchResultViewResource.getCases().get(1).getCaseId(),
+                    is(Long.toString(caseIdStarting + 1))),
+                () -> assertThat(caseSearchResultViewResource.getCases().get(19).getCaseId(),
+                    is(Long.toString(caseIdStarting + 19))),
+                () -> assertNextPageGlobalCaseData(caseDetails.getFields()),
+                () -> assertNextPageGlobalCaseMetadata(caseDetails.getFields())
+            );
+        }
+
+        @Test
+        void shouldReturnNextPage100CaseDetailsForDefaultUseCaseFromGlobalIndex() throws Exception {
+            final int PAGE_FROM = 10;
+            final int PAGE_SIZE = 100;
+
+            final long total = 1000L;
+
+            ElasticsearchTestRequest searchRequest = ElasticsearchTestRequest.builder()
+                .query(baseQuery)
+                .from(PAGE_FROM)
+                .size(PAGE_SIZE)
+                .sort("reference.keyword")
+                .build();
+
+            CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
+                null, true);
+
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
+            final long caseIdStarting = 1999866820970009L;
+            assertAll(
+                () -> assertThat(caseSearchResultViewResource.getTotal(), is(total)),
+                () -> assertThat(caseSearchResultViewResource.getCases().size(), is(PAGE_SIZE)),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getCaseId(),
+                    is(Long.toString(caseIdStarting))),
+                () -> assertThat(caseSearchResultViewResource.getCases().get(99).getCaseId(),
+                    is(Long.toString(caseIdStarting + 99))),
+                () -> assertNextPageGlobalCaseData(caseDetails.getFields()),
+                () -> assertNextPageGlobalCaseMetadata(caseDetails.getFields())
+            );
+        }
+
+        @Test
+        void shouldReturnLastPartialPageCaseDetailsForDefaultUseCaseFromGlobalIndex() throws Exception {
+            final int PAGE_SIZE = 10;
+            final long total = getCasesTotal();
+            int pageFrom = (int) Math.max(0L, total - 5);
+
+            ElasticsearchTestRequest searchRequest = ElasticsearchTestRequest.builder()
+                .query(baseQuery)
+                .from(pageFrom)
+                .size(PAGE_SIZE)
+                .sort("reference.keyword")
+                .build();
+
+            CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
+                null, true);
+
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
+            assertAll(
+                () -> assertThat(total, greaterThanOrEqualTo(5L)),
+                () -> assertThat(caseSearchResultViewResource.getTotal(), is(total)),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getCaseId(),
+                    is("1999866820970994")),
+                () -> assertThat(caseDetails.getFields().containsKey(
+                    MetaData.CaseField.CASE_REFERENCE.getReference()), is(true))
+            );
+        }
+
+        @Test
+        void shouldReturnEmptyPageWhenFromEqualsTotalForDefaultUseCaseFromGlobalIndex() throws Exception {
+            final int PAGE_SIZE = 10;
+            final long total = 1000L;
+            int pageFrom = Math.toIntExact(total);
+
+            ElasticsearchTestRequest searchRequest = ElasticsearchTestRequest.builder()
+                .query(baseQuery)
+                .from(pageFrom)
+                .size(PAGE_SIZE)
+                .sort("reference.keyword")
+                .build();
+
+            CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
+                null, true);
+
+            assertAll(
+                () -> assertThat(caseSearchResultViewResource.getTotal(), is(total)),
+                () -> assertThat(caseSearchResultViewResource.getCases().size(), is(0))
+            );
+        }
+
+        @Test
+        void shouldReturnDifferentReferencesAcrossPagesForDefaultUseCaseFromGlobalIndex() throws Exception {
+            final int PAGE_SIZE = 1;
+            ElasticsearchTestRequest firstPageRequest = ElasticsearchTestRequest.builder()
+                .query(baseQuery)
+                .size(PAGE_SIZE)
+                .sort("reference.keyword")
+                .build();
+
+            ElasticsearchTestRequest nextPageRequest = ElasticsearchTestRequest.builder()
+                .query(baseQuery)
+                .from(1)
+                .size(PAGE_SIZE)
+                .sort("reference.keyword")
+                .build();
+
+            CaseSearchResultViewResource firstPage = executeRequest(firstPageRequest, CASE_TYPE_A, null, true);
+            CaseSearchResultViewResource nextPage = executeRequest(nextPageRequest, CASE_TYPE_A, null, true);
+
+            String firstReference = (String) firstPage.getCases().getFirst().getFields()
+                .get(MetaData.CaseField.CASE_REFERENCE.getReference());
+            String nextReference = (String) nextPage.getCases().getFirst().getFields()
+                .get(MetaData.CaseField.CASE_REFERENCE.getReference());
+
+            assertAll(
+                () -> assertThat(firstPage.getTotal(), is(GLOBAL_DOCS_SIZE)),
+                () -> assertThat(nextPage.getTotal(), is(GLOBAL_DOCS_SIZE)),
+                () -> assertThat(firstReference, is(not(nextReference)))
             );
         }
 
@@ -306,12 +496,13 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                     .must(matchQuery(caseData(COUNTRY_FIELD), ElasticsearchTestHelper.COUNTRY_VALUE)) // Complex
                     .must(matchQuery(caseData(COLLECTION_FIELD) + VALUE_SUFFIX, COLLECTION_VALUE)) // Collection
                     .must(matchQuery(STATE, STATE_VALUE))) // Metadata
+                .sort("reference.keyword")
                 .build();
 
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
-                null);
+                null, false);
 
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
                 () -> assertThat(caseSearchResultViewResource.getCases().size(), is(1)),
@@ -335,7 +526,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 .build();
 
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
-                null);
+                null, false);
 
             assertThat(caseSearchResultViewResource.getCases().size(),is(0));
         }
@@ -344,21 +535,13 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
         void shouldReturnAllCaseDetailsForDefaultUseCaseWithRoleCaseworkerCaa() throws Exception {
             MockUtils.setSecurityAuthorities(authentication, CASEWORKER_CAA);
             ElasticsearchTestRequest searchRequest = ElasticsearchTestRequest.builder()
-                .query(boolQuery()
-                    .must(matchQuery(caseData(NUMBER_FIELD), NUMBER_VALUE)) // ES Double
-                    .must(matchQuery(caseData(YES_OR_NO_FIELD), YES_OR_NO_VALUE)) // ES Keyword
-                    .must(matchQuery(caseData(TEXT_FIELD), TEXT_VALUE)) // ES Text
-                    .must(matchQuery(caseData(DATE_FIELD), DATE_VALUE)) // ES Date
-                    .must(matchQuery(caseData(PHONE_FIELD), PHONE_VALUE)) // ES Phone
-                    .must(matchQuery(caseData(COUNTRY_FIELD), ElasticsearchTestHelper.COUNTRY_VALUE)) // Complex
-                    .must(matchQuery(caseData(COLLECTION_FIELD) + VALUE_SUFFIX, COLLECTION_VALUE)) // Collection
-                    .must(matchQuery(STATE, STATE_VALUE))) // Metadata
+                .query(baseQuery)
                 .build();
 
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
-                null);
+                null, false);
 
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
                 () -> assertThat(caseSearchResultViewResource.getCases().size(), is(1)),
@@ -372,7 +555,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
             ElasticsearchTestRequest searchRequest = caseReferenceRequest(DEFAULT_CASE_REFERENCE);
 
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
-                null);
+                null, false);
 
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
@@ -386,8 +569,8 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
             ElasticsearchTestRequest searchRequest = caseReferenceRequest(DEFAULT_CASE_REFERENCE);
 
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
-                "TEST");
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+                "TEST", false);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
                 () -> assertUseCaseHeadersUserRole(caseSearchResultViewResource.getHeaders()),
@@ -401,22 +584,22 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
             ElasticsearchTestRequest searchRequest = caseReferenceRequest(DEFAULT_CASE_REFERENCE);
 
             CaseSearchResultViewResource caseSearchResultViewResource =
-                executeRequest(searchRequest, CASE_TYPE_A, "RDM-8782");
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+                executeRequest(searchRequest, CASE_TYPE_A, "RDM-8782", false);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
 
             List<String> expectedFields = Collections.singletonList(EMAIL_FIELD);
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
                 () -> assertThat(caseSearchResultViewResource.getHeaders().size(), is(1)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getMetadata().getJurisdiction(),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getMetadata().getJurisdiction(),
                     is(AUTOTEST_1)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getMetadata().getCaseTypeId(),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getMetadata().getCaseTypeId(),
                     is(CASE_TYPE_A)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getCases().size(), is(1)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getCases().get(0),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getCases().size(), is(1)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getCases().getFirst(),
                     is(DEFAULT_CASE_REFERENCE)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().size(), is(1)),
-                () -> expectedFields.forEach(f -> assertThat(caseSearchResultViewResource.getHeaders().get(0)
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().size(), is(1)),
+                () -> expectedFields.forEach(f -> assertThat(caseSearchResultViewResource.getHeaders().getFirst()
                     .getFields(), hasItem(hasProperty(CASE_FIELD_ID, is(f))))),
 
                 () -> assertThat(caseDetails.getFields().get(EMAIL_FIELD), is(EMAIL_VALUE)),
@@ -424,25 +607,24 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
             );
         }
 
-
         @Test
         void shouldReturnAllHeaderInfoForDefaultUseCaseWhenUseHaveNoAuthorisationOnCaseField() throws Exception {
             ElasticsearchTestRequest searchRequest = caseReferenceRequest(DEFAULT_CASE_REFERENCE);
 
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
-                "RDM-8782NOACCESS");
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+                "RDM-8782NOACCESS", false);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
 
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getHeaders().size(), is(1)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getMetadata().getJurisdiction(),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getMetadata().getJurisdiction(),
                     is(AUTOTEST_1)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getMetadata().getCaseTypeId(),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getMetadata().getCaseTypeId(),
                     is(CASE_TYPE_A)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getCases().size(), is(1)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getCases().get(0),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getCases().size(), is(1)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getCases().getFirst(),
                     is(DEFAULT_CASE_REFERENCE)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().size(), is(0)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().size(), is(0)),
                 () -> assertThat(caseDetails.getFields().size(), is(8)),
                 () -> assertExampleCaseMetadata(caseDetails.getFields(), false)
             );
@@ -453,7 +635,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
             ElasticsearchTestRequest searchRequest = caseReferenceRequest(DEFAULT_CASE_REFERENCE);
 
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
-                "orgcases");
+                "orgcases", false);
 
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
@@ -466,9 +648,9 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
             ElasticsearchTestRequest searchRequest = caseReferenceRequest(DEFAULT_CASE_REFERENCE);
 
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
-                "ORGCASES");
+                "ORGCASES", false);
 
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
                 () -> assertThat(caseSearchResultViewResource.getCases().size(), is(1)),
@@ -491,18 +673,18 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 .build();
 
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
-                null);
+                null, false);
 
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().size(), is(3)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().get(0).getCaseFieldId(),
-                    is(TEXT_FIELD)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().get(1).getCaseFieldId(),
-                    is(nestedFieldId)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().get(2).getCaseFieldId(),
-                    is(MetaData.CaseField.CASE_REFERENCE.getReference())),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().size(), is(3)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().getFirst()
+                        .getCaseFieldId(), is(TEXT_FIELD)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().get(1)
+                        .getCaseFieldId(), is(nestedFieldId)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().get(2)
+                        .getCaseFieldId(), is(MetaData.CaseField.CASE_REFERENCE.getReference())),
                 () -> assertThat(caseDetails.getFields().size(), is(11)),
                 () -> assertExampleCaseMetadata(caseDetails.getFields(), false),
                 () -> assertThat(caseDetails.getFields().get(TEXT_FIELD), is(TEXT_VALUE)),
@@ -528,18 +710,18 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 .build();
 
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
-                "SEARCH");
+                "SEARCH", false);
 
-            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().get(0);
+            SearchResultViewItem caseDetails = caseSearchResultViewResource.getCases().getFirst();
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().size(), is(3)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().get(0).getCaseFieldId(),
-                    is(TEXT_FIELD)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().get(1).getCaseFieldId(),
-                    is(nestedFieldId)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().get(2).getCaseFieldId(),
-                    is(MetaData.CaseField.CASE_REFERENCE.getReference())),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().size(), is(3)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().getFirst()
+                        .getCaseFieldId(), is(TEXT_FIELD)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().get(1)
+                        .getCaseFieldId(), is(nestedFieldId)),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().get(2)
+                        .getCaseFieldId(), is(MetaData.CaseField.CASE_REFERENCE.getReference())),
                 () -> assertThat(caseDetails.getFields().size(), is(11)),
                 () -> assertExampleCaseMetadata(caseDetails.getFields(), false),
                 () -> assertThat(caseDetails.getFields().get(TEXT_FIELD), is(TEXT_VALUE)),
@@ -561,18 +743,18 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 .build();
 
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
-                "orgcases");
+                "orgcases", false);
 
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
-                () -> assertThat(caseSearchResultViewResource.getHeaders().get(0).getFields().size(), is(10)),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getFields().size(), is(16)),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().size(),
+                () -> assertThat(caseSearchResultViewResource.getHeaders().getFirst().getFields().size(), is(10)),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getFields().size(), is(16)),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData().size(),
                     is(2)),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().get("SDField2")
-                    .asText(), is("SDField2Value")),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().get("SDField3")
-                    .asText(), is("SDField3Value"))
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData()
+                    .get("SDField2").asText(), is("SDField2Value")),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData()
+                    .get("SDField3").asText(), is("SDField3Value"))
             );
         }
 
@@ -584,18 +766,18 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 .build();
 
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
-                "orgcases");
+                "orgcases", false);
 
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().size(),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData().size(),
                     is(3)),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().get("SDField1")
-                    .asText(), is("SDField1Value")),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().get("SDField2")
-                    .asText(), is("SDField2Value")),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().get("SDField3")
-                    .asText(), is("SDField3Value"))
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData()
+                    .get("SDField1").asText(), is("SDField1Value")),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData()
+                    .get("SDField2").asText(), is("SDField2Value")),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData()
+                    .get("SDField3").asText(), is("SDField3Value"))
             );
         }
 
@@ -606,11 +788,12 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 .build();
 
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
-                "orgcases");
+                "orgcases", false);
 
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData(), is(nullValue()))
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData(),
+                    is(nullValue()))
             );
         }
 
@@ -621,18 +804,18 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 .build();
 
             CaseSearchResultViewResource caseSearchResultViewResource = executeRequest(searchRequest, CASE_TYPE_A,
-                null);
+                null, false);
 
             assertAll(
                 () -> assertThat(caseSearchResultViewResource.getTotal(), is(1L)),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().size(),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData().size(),
                     is(3)),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().get("SDField1")
-                    .asText(), is("SDField1Value")),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().get("SDField2")
-                    .asText(), is("SDField2Value")),
-                () -> assertThat(caseSearchResultViewResource.getCases().get(0).getSupplementaryData().get("SDField3")
-                    .asText(), is("SDField3Value"))
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData()
+                    .get("SDField1").asText(), is("SDField1Value")),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData()
+                    .get("SDField2").asText(), is("SDField2Value")),
+                () -> assertThat(caseSearchResultViewResource.getCases().getFirst().getSupplementaryData()
+                    .get("SDField3").asText(), is("SDField3Value"))
             );
         }
 
@@ -711,14 +894,13 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
             assertAll(
                 () -> assertThat(headers.size(), is(1)),
-                () -> assertThat(headers.get(0).getMetadata().getJurisdiction(), is(AUTOTEST_1)),
-                () -> assertThat(headers.get(0).getMetadata().getCaseTypeId(), is(CASE_TYPE_A)),
-                () -> assertThat(headers.get(0).getCases().size(), is(1)),
-                () -> assertThat(headers.get(0).getCases().get(0), is(DEFAULT_CASE_REFERENCE)),
-                () -> assertThat(headers.get(0).getFields().size(), is(24)),
-                () -> expectedFields.forEach(f -> assertThat(headers.get(0).getFields(),
-                    hasItem(hasProperty(CASE_FIELD_ID,
-                        is(f)))))
+                () -> assertThat(headers.getFirst().getMetadata().getJurisdiction(), is(AUTOTEST_1)),
+                () -> assertThat(headers.getFirst().getMetadata().getCaseTypeId(), is(CASE_TYPE_A)),
+                () -> assertThat(headers.getFirst().getCases().size(), is(1)),
+                () -> assertThat(headers.getFirst().getCases().getFirst(), is(DEFAULT_CASE_REFERENCE)),
+                () -> assertThat(headers.getFirst().getFields().size(), is(24)),
+                () -> expectedFields.forEach(f -> assertThat(headers.getFirst().getFields(),
+                    hasItem(hasProperty(CASE_FIELD_ID, is(f)))))
             );
         }
 
@@ -728,14 +910,13 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
             assertAll(
                 () -> assertThat(headers.size(), is(1)),
-                () -> assertThat(headers.get(0).getMetadata().getJurisdiction(), is(AUTOTEST_1)),
-                () -> assertThat(headers.get(0).getMetadata().getCaseTypeId(), is(CASE_TYPE_A)),
-                () -> assertThat(headers.get(0).getCases().size(), is(1)),
-                () -> assertThat(headers.get(0).getCases().get(0), is(DEFAULT_CASE_REFERENCE)),
-                () -> assertThat(headers.get(0).getFields().size(), is(5)),
-                () -> expectedFields.forEach(f -> assertThat(headers.get(0).getFields(),
-                    hasItem(hasProperty(CASE_FIELD_ID,
-                        is(f)))))
+                () -> assertThat(headers.getFirst().getMetadata().getJurisdiction(), is(AUTOTEST_1)),
+                () -> assertThat(headers.getFirst().getMetadata().getCaseTypeId(), is(CASE_TYPE_A)),
+                () -> assertThat(headers.getFirst().getCases().size(), is(1)),
+                () -> assertThat(headers.getFirst().getCases().getFirst(), is(DEFAULT_CASE_REFERENCE)),
+                () -> assertThat(headers.getFirst().getFields().size(), is(5)),
+                () -> expectedFields.forEach(f -> assertThat(headers.getFirst().getFields(),
+                    hasItem(hasProperty(CASE_FIELD_ID, is(f)))))
             );
         }
 
@@ -747,20 +928,19 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
             assertAll(
                 () -> assertThat(headers.size(), is(1)),
-                () -> assertThat(headers.get(0).getMetadata().getJurisdiction(), is(AUTOTEST_1)),
-                () -> assertThat(headers.get(0).getMetadata().getCaseTypeId(), is(CASE_TYPE_A)),
-                () -> assertThat(headers.get(0).getCases().size(), is(1)),
-                () -> assertThat(headers.get(0).getCases().get(0), is(DEFAULT_CASE_REFERENCE)),
-                () -> assertThat(headers.get(0).getFields().size(), is(10)),
-                () -> expectedFields.forEach(f -> assertThat(headers.get(0).getFields(),
-                    hasItem(hasProperty(CASE_FIELD_ID,
-                        is(f)))))
+                () -> assertThat(headers.getFirst().getMetadata().getJurisdiction(), is(AUTOTEST_1)),
+                () -> assertThat(headers.getFirst().getMetadata().getCaseTypeId(), is(CASE_TYPE_A)),
+                () -> assertThat(headers.getFirst().getCases().size(), is(1)),
+                () -> assertThat(headers.getFirst().getCases().getFirst(), is(DEFAULT_CASE_REFERENCE)),
+                () -> assertThat(headers.getFirst().getFields().size(), is(10)),
+                () -> expectedFields.forEach(f -> assertThat(headers.getFirst().getFields(),
+                    hasItem(hasProperty(CASE_FIELD_ID, is(f)))))
             );
         }
 
         private void assertExampleCaseData(Map<String, Object> data, boolean formatted) {
             assertAll(
-                () -> assertThat(asCollection(data.get(COLLECTION_FIELD)).get(0).get(VALUE), is(COLLECTION_VALUE)),
+                () -> assertThat(asCollection(data.get(COLLECTION_FIELD)).getFirst().get(VALUE), is(COLLECTION_VALUE)),
                 () -> assertThat(asCollection(data.get(COLLECTION_FIELD)).get(1).get(VALUE),
                     is("CollectionTextValue1")),
                 () -> assertThat(asMap(data.get(COMPLEX_FIELD)).get(COMPLEX_FIXED_LIST_FIELD), is("VALUE3")),
@@ -768,7 +948,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                     .get(NESTED_NUMBER_FIELD), is(NESTED_NUMBER_FIELD_VALUE)),
                 () -> assertThat(asMap(data.get(COMPLEX_FIELD)).get(COMPLEX_TEXT_FIELD), is(COMPLEX_TEXT_VALUE)),
                 () -> assertThat(asCollection(asMap(asMap(data.get(COMPLEX_FIELD)).get(COMPLEX_NESTED_FIELD))
-                    .get(NESTED_COLLECTION_TEXT_FIELD)).get(0).get(VALUE), is("NestedCollectionTextValue1")),
+                    .get(NESTED_COLLECTION_TEXT_FIELD)).getFirst().get(VALUE), is("NestedCollectionTextValue1")),
                 () -> assertThat(asCollection(asMap(asMap(data.get(COMPLEX_FIELD)).get(COMPLEX_NESTED_FIELD))
                     .get(NESTED_COLLECTION_TEXT_FIELD)).get(1).get(VALUE), is("NestedCollectionTextValue2")),
                 () -> assertThat(data.get(DATE_FIELD), is(formatted ? "12/2007" : DATE_VALUE)),
@@ -786,7 +966,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 () -> assertThat(data.get(EMAIL_FIELD), is(EMAIL_VALUE)),
                 () -> assertThat(data.get(FIXED_LIST_FIELD), is(FIXED_LIST_VALUE)),
                 () -> assertThat(data.get(TEXT_FIELD), is(TEXT_VALUE)),
-                () -> assertThat(asCollection(data.get(COLLECTION_FIELD)).get(0).get(VALUE), is(COLLECTION_VALUE)),
+                () -> assertThat(asCollection(data.get(COLLECTION_FIELD)).getFirst().get(VALUE), is(COLLECTION_VALUE)),
                 () -> assertThat(asCollection(data.get(COLLECTION_FIELD)).get(1).get(VALUE),
                     is("CollectionTextValue1"))
             );
@@ -810,6 +990,86 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
             );
         }
 
+        private void assertNewGlobalCaseData(Map<String, Object> data) {
+            assertAll(
+                () -> assertThat(asCollection(data.get(COLLECTION_FIELD)).getFirst().get(VALUE), is(COLLECTION_VALUE)),
+                () -> assertThat(asCollection(data.get(COLLECTION_FIELD)).get(1).get(VALUE),
+                    is("CollectionTextValue1")),
+                () -> assertThat(asMap(data.get(COMPLEX_FIELD)).get(COMPLEX_FIXED_LIST_FIELD), is("VALUE3")),
+                () -> assertThat(asMap(asMap(data.get(COMPLEX_FIELD)).get(COMPLEX_NESTED_FIELD))
+                    .get(NESTED_NUMBER_FIELD), is(NESTED_NUMBER_FIELD_VALUE)),
+                () -> assertThat(asMap(data.get(COMPLEX_FIELD)).get(COMPLEX_TEXT_FIELD), is(COMPLEX_TEXT_VALUE)),
+                () -> assertThat(asCollection(asMap(asMap(data.get(COMPLEX_FIELD)).get(COMPLEX_NESTED_FIELD))
+                    .get(NESTED_COLLECTION_TEXT_FIELD)).getFirst().get(VALUE), is("NestedCollectionTextValue1")),
+                () -> assertThat(asCollection(asMap(asMap(data.get(COMPLEX_FIELD)).get(COMPLEX_NESTED_FIELD))
+                    .get(NESTED_COLLECTION_TEXT_FIELD)).get(1).get(VALUE), is("NestedCollectionTextValue2")),
+                () -> assertThat(data.get(DATE_FIELD), is(DATE_VALUE)),
+                () -> assertThat(data.get(DATE_TIME_FIELD), is(DATE_TIME_VALUE)),
+                () -> assertThat(data.get(EMAIL_FIELD), is(EMAIL_VALUE)),
+                () -> assertThat(data.get(FIXED_LIST_FIELD), is(FIXED_LIST_VALUE)),
+                () -> assertThat(data.get(FIXED_RADIO_LIST_FIELD), is(nullValue())),
+                () -> assertThat(data.get(TEXT_FIELD), is(TEXT_VALUE))
+            );
+        }
+
+        private void assertNewGlobalCaseMetadata(Map<String, Object> data) {
+            assertAll(
+                () -> assertThat(data.get(MetaData.CaseField.JURISDICTION.getReference()), is(AUTOTEST_1)),
+                () -> assertThat(data.get(MetaData.CaseField.CASE_TYPE.getReference()), is(CASE_TYPE_A)),
+                () -> assertThat(data.get(MetaData.CaseField.CREATED_DATE.getReference()),
+                    is(CREATED_DATE_VALUE_GLOBAL)),
+                () -> assertThat(data.get(MetaData.CaseField.LAST_MODIFIED_DATE.getReference()),
+                    is(LAST_MODIFIED_DATE_VALUE)),
+                () -> assertThat(data.get(MetaData.CaseField.LAST_STATE_MODIFIED_DATE.getReference()),
+                    is(LAST_STATE_MODIFIED_DATE_VALUE)),
+                () -> assertThat(data.get(MetaData.CaseField.CASE_REFERENCE.getReference()),
+                    is(REFERENCE_GLOBAL_SEARCH_05)),
+                () -> assertThat(data.get(MetaData.CaseField.STATE.getReference()), is(STATE_VALUE)),
+                () -> assertThat(data.get(MetaData.CaseField.SECURITY_CLASSIFICATION.getReference()),
+                    is(SecurityClassification.PUBLIC.name()))
+            );
+        }
+
+        private void assertNextPageGlobalCaseData(Map<String, Object> data) {
+            assertAll(
+                () -> assertThat(asCollection(data.get(COLLECTION_FIELD)).getFirst().get(VALUE), is(COLLECTION_VALUE)),
+                () -> assertThat(asCollection(data.get(COLLECTION_FIELD)).get(1).get(VALUE),
+                    is("CollectionTextValue1")),
+                () -> assertThat(asMap(data.get(COMPLEX_FIELD)).get(COMPLEX_FIXED_LIST_FIELD), is("VALUE3")),
+                () -> assertThat(asMap(asMap(data.get(COMPLEX_FIELD)).get(COMPLEX_NESTED_FIELD))
+                    .get(NESTED_NUMBER_FIELD), is(NESTED_NUMBER_FIELD_VALUE)),
+                () -> assertThat(asMap(data.get(COMPLEX_FIELD)).get(COMPLEX_TEXT_FIELD), is(COMPLEX_TEXT_VALUE)),
+                () -> assertThat(asCollection(asMap(asMap(data.get(COMPLEX_FIELD)).get(COMPLEX_NESTED_FIELD))
+                    .get(NESTED_COLLECTION_TEXT_FIELD)).getFirst().get(VALUE), is("NestedCollectionTextValue1")),
+                () -> assertThat(asCollection(asMap(asMap(data.get(COMPLEX_FIELD)).get(COMPLEX_NESTED_FIELD))
+                    .get(NESTED_COLLECTION_TEXT_FIELD)).get(1).get(VALUE), is("NestedCollectionTextValue2")),
+                () -> assertThat(data.get(DATE_FIELD), is(DATE_VALUE)),
+                () -> assertThat(data.get(DATE_TIME_FIELD), is(DATE_TIME_VALUE)),
+                () -> assertThat(data.get(EMAIL_FIELD), is(EMAIL_VALUE)),
+                () -> assertThat(data.get(FIXED_LIST_FIELD), is(FIXED_LIST_VALUE)),
+                () -> assertThat(data.get(FIXED_RADIO_LIST_FIELD), is(nullValue())),
+                () -> assertThat(data.get(TEXT_FIELD), is(TEXT_VALUE))
+            );
+        }
+
+        private void assertNextPageGlobalCaseMetadata(Map<String, Object> data) {
+            assertAll(
+                () -> assertThat(data.get(MetaData.CaseField.JURISDICTION.getReference()), is(AUTOTEST_1)),
+                () -> assertThat(data.get(MetaData.CaseField.CASE_TYPE.getReference()), is(CASE_TYPE_A)),
+                () -> assertThat(data.get(MetaData.CaseField.CREATED_DATE.getReference()),
+                    is(CREATED_DATE_VALUE_GLOBAL)),
+                () -> assertThat(data.get(MetaData.CaseField.LAST_MODIFIED_DATE.getReference()),
+                    is(LAST_MODIFIED_DATE_VALUE)),
+                () -> assertThat(data.get(MetaData.CaseField.LAST_STATE_MODIFIED_DATE.getReference()),
+                    is(LAST_STATE_MODIFIED_DATE_VALUE)),
+                () -> assertThat(data.get(MetaData.CaseField.CASE_REFERENCE.getReference()),
+                    is(REFERENCE_GLOBAL_SEARCH_06)),
+                () -> assertThat(data.get(MetaData.CaseField.STATE.getReference()), is(STATE_VALUE)),
+                () -> assertThat(data.get(MetaData.CaseField.SECURITY_CLASSIFICATION.getReference()),
+                    is(SecurityClassification.PUBLIC.name()))
+            );
+        }
+
         private Map<String, Object> asMap(Object obj) {
             return (Map<String, Object>) obj;
         }
@@ -819,9 +1079,10 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
         }
 
         private CaseSearchResultViewResource executeRequest(ElasticsearchTestRequest searchRequest,
-                                                            String caseTypeParam, String useCase) throws Exception {
+                                                            String caseTypeParam, String useCase, boolean global)
+            throws Exception {
             MockHttpServletRequestBuilder postRequest =
-                createPostRequest(POST_SEARCH_CASES, searchRequest, caseTypeParam, useCase);
+                createPostRequest(POST_SEARCH_CASES, searchRequest, caseTypeParam, useCase, global);
 
             return ElasticsearchTestHelper.executeRequest(postRequest, 200, mapper, mockMvc,
                 CaseSearchResultViewResource.class);
@@ -831,8 +1092,16 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                                              String caseTypeParam,
                                              String useCase,
                                              int expectedErrorCode) throws Exception {
+            return executeErrorRequest(searchRequest, caseTypeParam, useCase, false, expectedErrorCode);
+        }
+
+        private JsonNode executeErrorRequest(ElasticsearchTestRequest searchRequest,
+                                             String caseTypeParam,
+                                             String useCase,
+                                             boolean global,
+                                             int expectedErrorCode) throws Exception {
             MockHttpServletRequestBuilder postRequest = createPostRequest(POST_SEARCH_CASES, searchRequest,
-                caseTypeParam, useCase);
+                caseTypeParam, useCase, global);
 
             return ElasticsearchTestHelper.executeRequest(postRequest, expectedErrorCode, mapper, mockMvc,
                 JsonNode.class);
@@ -914,7 +1183,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
                 assertAll(
                     () -> assertThat(caseSearchResult.getTotal(), is(1L)),
-                    () -> assertThat(caseSearchResult.getCases().get(0).getReference(), is(1589460099608690L))
+                    () -> assertThat(caseSearchResult.getCases().getFirst().getReference(), is(1589460099608690L))
                 );
             }
 
@@ -1252,7 +1521,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
                 assertAll(
                     () -> assertThat(caseSearchResult.getTotal(), is(1L)),
-                    () -> assertThat(caseSearchResult.getCases().get(0).getCaseTypeId(), is(CASE_TYPE_B))
+                    () -> assertThat(caseSearchResult.getCases().getFirst().getCaseTypeId(), is(CASE_TYPE_B))
                 );
             }
 
@@ -1297,10 +1566,10 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
             void shouldMergePermissionsOfMultipleRolesForCases() throws Exception {
                 if (applicationParams.getEnableAttributeBasedAccessControl()) {
                     String roleAssignmentResponseJson = roleAssignmentResponseJson(
-                        securityCTSpecificPublicUserRoleAssignmentJson("123","idam:caseworker-autotest1-solicitor",
-                            "1588870615652827"),
-                        securityCTSpecificPublicUserRoleAssignmentJson("123","idam:caseworker-autotest1-solicitor",
-                            "1589460125872336")
+                        securityCTSpecificPublicUserRoleAssignmentJson("123",
+                            "idam:caseworker-autotest1-solicitor","1588870615652827"),
+                        securityCTSpecificPublicUserRoleAssignmentJson("123",
+                            "idam:caseworker-autotest1-solicitor","1589460125872336")
                     );
 
                     stubFor(WireMock.get(urlMatching(GET_ROLE_ASSIGNMENTS_PREFIX + "123"))
@@ -1341,8 +1610,10 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
         void shouldOnlyReturnCasesSolicitorHasBeenGrantedAccessTo() throws Exception {
             if (applicationParams.getEnableAttributeBasedAccessControl()) {
                 String roleAssignmentResponseJson = roleAssignmentResponseJson(
-                    securityCTSpecificPublicUserRoleAssignmentJson("123","[CREATOR]", "1589460125872336"),
-                    securityCTSpecificPublicUserRoleAssignmentJson("123","[DEFENDANT]", "1589460099608691")
+                    securityCTSpecificPublicUserRoleAssignmentJson("123","[CREATOR]",
+                        "1589460125872336"),
+                    securityCTSpecificPublicUserRoleAssignmentJson("123","[DEFENDANT]",
+                        "1589460099608691")
                 );
 
                 stubFor(WireMock.get(urlMatching(GET_ROLE_ASSIGNMENTS_PREFIX + "123"))
@@ -1390,7 +1661,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
         }
 
         private Map<String, JsonNode> getFirstCaseData(CaseSearchResult caseSearchResult) {
-            return caseSearchResult.getCases().get(0).getData();
+            return caseSearchResult.getCases().getFirst().getData();
         }
 
         private CaseDetails getCase(CaseSearchResult caseSearchResult, Long reference) {
@@ -1437,7 +1708,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                     () -> assertThat(caseSearchResult.getTotal(), is(3L)),
                     () -> assertThat(caseSearchResult.getCaseReferences(CASE_TYPE_A).size(), is(2)),
                     () -> assertThat(caseSearchResult.getCaseReferences(CASE_TYPE_B).size(), is(1)),
-                    () -> assertThat(caseSearchResult.getCases().get(0).getData().size(), is(0)),
+                    () -> assertThat(caseSearchResult.getCases().getFirst().getData().size(), is(0)),
                     () -> assertThat(caseSearchResult.getCases().get(1).getData().size(), is(0)),
                     () -> assertThat(caseSearchResult.getCases().get(2).getData().size(), is(0))
                 );
@@ -1456,13 +1727,13 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
                 assertAll(
                     () -> assertThat(caseSearchResult.getTotal(), is(3L)),
-                    () -> assertThat(caseSearchResult.getCases().get(0).getData().get(TEXT_ALIAS).asText(),
+                    () -> assertThat(caseSearchResult.getCases().getFirst().getData().get(TEXT_ALIAS).asText(),
                         is(TEXT_VALUE)),
                     () -> assertThat(caseSearchResult.getCases().get(1).getData().get(TEXT_ALIAS).asText(),
                         is("CCC TextValue")),
                     () -> assertThat(caseSearchResult.getCases().get(2).getData().get(TEXT_ALIAS).asText(),
                         is("BBB TextValue")),
-                    () -> assertThat(caseSearchResult.getCases().get(0).getData().size(), is(1)),
+                    () -> assertThat(caseSearchResult.getCases().getFirst().getData().size(), is(1)),
                     () -> assertThat(caseSearchResult.getCases().get(1).getData().size(), is(1)),
                     () -> assertThat(caseSearchResult.getCases().get(2).getData().size(), is(1))
                 );
@@ -1517,12 +1788,12 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                         .must(matchQuery(caseData(PHONE_FIELD), PHONE_VALUE)) // ES Phone
                         .must(matchQuery(caseData(COUNTRY_FIELD), COUNTRY_VALUE)) // Complex
                         .must(matchQuery(caseData(COLLECTION_FIELD) + VALUE_SUFFIX, COLLECTION_VALUE)) // Collection
-                        .must(matchQuery(STATE, STATE_VALUE))) // Metadata
+                        .must(matchQuery(STATE, STATE_VALUE)))
                     .build();
 
                 CaseSearchResult caseSearchResult = executeRequest(searchRequest, CASE_TYPE_A);
 
-                CaseDetails caseDetails = caseSearchResult.getCases().get(0);
+                CaseDetails caseDetails = caseSearchResult.getCases().getFirst();
                 assertAll(
                     () -> assertThat(caseSearchResult.getTotal(), is(1L)),
                     () -> assertExampleCaseMetadata(caseDetails),
@@ -1546,7 +1817,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
                 CaseSearchResult caseSearchResult = executeRequest(searchRequest, CASE_TYPE_A);
 
-                CaseDetails caseDetails = caseSearchResult.getCases().get(0);
+                CaseDetails caseDetails = caseSearchResult.getCases().getFirst();
                 assertAll(
                     () -> assertThat(caseSearchResult.getTotal(), is(1L)),
                     () -> assertExampleCaseMetadata(caseDetails),
@@ -1568,7 +1839,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
                 CaseSearchResult caseSearchResult = executeRequest(searchRequest, CASE_TYPE_A);
 
-                CaseDetails caseDetails = caseSearchResult.getCases().get(0);
+                CaseDetails caseDetails = caseSearchResult.getCases().getFirst();
                 assertAll(
                     () -> assertThat(caseSearchResult.getTotal(), is(1L)),
                     () -> assertExampleCaseMetadata(caseDetails),
@@ -1718,7 +1989,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 () -> assertThat(result.getResultInfo().getCasesReturned(), is(1)),
                 () -> assertThat(result.getResults().size(), is(1))
             );
-            GlobalSearchResponsePayload.Result result1 = result.getResults().get(0);
+            GlobalSearchResponsePayload.Result result1 = result.getResults().getFirst();
             assertAll(
                 // verify case data from: `/resources/elasticsearch/data/global_search/global-search-01.json`
                 () -> assertThat(result1.getStateId(), is(STATE_GLOBAL_SEARCH)),
@@ -1727,7 +1998,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 () -> assertThat(result1.getCaseManagementCategoryName(), is("Category label Order-02")),
                 () -> assertThat(result1.getCaseNameHmctsInternal(), is("Name Internal 01")),
                 () -> assertThat(result1.getOtherReferences().size(), is(1)),
-                () -> assertThat(result1.getOtherReferences().get(0), is(OTHER_REFERENCE_GLOBAL_SEARCH)),
+                () -> assertThat(result1.getOtherReferences().getFirst(), is(OTHER_REFERENCE_GLOBAL_SEARCH)),
                 // verify ref-data from: `/resources/mappings/refdata/get_building_locations.json`
                 () -> assertThat(result1.getBaseLocationId(), is(CASE_MANAGEMENT_BASE_LOCATION_GLOBAL_SEARCH)),
                 () -> assertThat(result1.getBaseLocationName(), is("54 TEST ROAD")),
@@ -1777,7 +2048,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 () -> assertThat(result.getResultInfo().getCasesReturned(), is(1)),
                 () -> assertThat(result.getResults().size(), is(1))
             );
-            assertThat(result.getResults().get(0).getCaseReference(), is(REFERENCE_GLOBAL_SEARCH_02));
+            assertThat(result.getResults().getFirst().getCaseReference(), is(REFERENCE_GLOBAL_SEARCH_02));
         }
 
         @DisplayName("ES Filters: should not return cases filtered by pre security filters")
@@ -1805,7 +2076,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 () -> assertThat(result.getResultInfo().getCasesReturned(), is(1)),
                 () -> assertThat(result.getResults().size(), is(1))
             );
-            assertThat(result.getResults().get(0).getCaseReference(), is(REFERENCE_GLOBAL_SEARCH_01));
+            assertThat(result.getResults().getFirst().getCaseReference(), is(REFERENCE_GLOBAL_SEARCH_01));
         }
 
         @DisplayName("ES Filters: should not return case fields filtered by post filtering authorisation rules")
@@ -1833,7 +2104,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
                 () -> assertThat(result.getResultInfo().getCasesReturned(), is(1)),
                 () -> assertThat(result.getResults().size(), is(1))
             );
-            GlobalSearchResponsePayload.Result result1 = result.getResults().get(0);
+            GlobalSearchResponsePayload.Result result1 = result.getResults().getFirst();
             assertAll(
                 () -> assertThat(result1.getCaseReference(), is(REFERENCE_GLOBAL_SEARCH_01)),
 
@@ -1971,7 +2242,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
     public static class PaginationTestProvider implements ArgumentsProvider  {
 
         @Override
-        public Stream<? extends Arguments> provideArguments(ExtensionContext context) throws Exception {
+        public Stream<? extends Arguments> provideArguments(ExtensionContext context) {
             return providePaginationTestArguments();
         }
     }
@@ -2051,7 +2322,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
     public static class SortCriteriaTestProvider implements ArgumentsProvider  {
 
         @Override
-        public Stream<? extends Arguments> provideArguments(ExtensionContext context) throws Exception {
+        public Stream<? extends Arguments> provideArguments(ExtensionContext context) {
             return provideSortCriteriaTestArguments();
         }
 
@@ -2123,33 +2394,23 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
         String name = category.getCategoryName() + "." + direction.name();
         SortCriteria sortCriteria = createSortCriteria(category, direction);
 
-        List<String> expectedCaseReferenceOrder = null;
-
-        switch (category) {
-            case CASE_NAME:
-                expectedCaseReferenceOrder = List.of(
-                    REFERENCE_GLOBAL_SEARCH_01,
-                    REFERENCE_GLOBAL_SEARCH_02,
-                    REFERENCE_GLOBAL_SEARCH_03
-                );
-                break;
-
-            case CASE_MANAGEMENT_CATEGORY_NAME:
-                expectedCaseReferenceOrder = List.of(
-                    REFERENCE_GLOBAL_SEARCH_03,
-                    REFERENCE_GLOBAL_SEARCH_01,
-                    REFERENCE_GLOBAL_SEARCH_02
-                );
-                break;
-
-            case CREATED_DATE:
-                expectedCaseReferenceOrder = List.of(
-                    REFERENCE_GLOBAL_SEARCH_02,
-                    REFERENCE_GLOBAL_SEARCH_03,
-                    REFERENCE_GLOBAL_SEARCH_01
-                );
-                break;
-        }
+        List<String> expectedCaseReferenceOrder = switch (category) {
+            case CASE_NAME -> List.of(
+                REFERENCE_GLOBAL_SEARCH_01,
+                REFERENCE_GLOBAL_SEARCH_02,
+                REFERENCE_GLOBAL_SEARCH_03
+            );
+            case CASE_MANAGEMENT_CATEGORY_NAME -> List.of(
+                REFERENCE_GLOBAL_SEARCH_03,
+                REFERENCE_GLOBAL_SEARCH_01,
+                REFERENCE_GLOBAL_SEARCH_02
+            );
+            case CREATED_DATE -> List.of(
+                REFERENCE_GLOBAL_SEARCH_02,
+                REFERENCE_GLOBAL_SEARCH_03,
+                REFERENCE_GLOBAL_SEARCH_01
+            );
+        };
 
         if (direction == GlobalSearchSortDirection.DESCENDING) {
             expectedCaseReferenceOrder = Lists.reverse(expectedCaseReferenceOrder);
@@ -2167,7 +2428,7 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
 
         return sortCriteria;
     }
-    
+
 
     private void stubCaseTypeRoleAssignments(String... caseTypes) {
         if (applicationParams.getEnableAttributeBasedAccessControl()) {
@@ -2189,15 +2450,15 @@ public class ElasticsearchIT extends ElasticsearchBaseTest {
             }
 
             if (Arrays.asList(caseTypes).contains("AAT")) {
-                roleAssignments.add(aatCTSpecificPublicUserRoleAssignmentJson(userId, "idam:caseworker-autotest1",
-                    "1588866820969121"));
-                roleAssignments.add(aatCTSpecificPublicUserRoleAssignmentJson(userId, "idam:caseworker-autotest1",
-                    "1589460056217857"));
+                roleAssignments.add(aatCTSpecificPublicUserRoleAssignmentJson(userId,
+                    "idam:caseworker-autotest1", "1588866820969121"));
+                roleAssignments.add(aatCTSpecificPublicUserRoleAssignmentJson(userId,
+                    "idam:caseworker-autotest1","1589460056217857"));
             }
 
             if (Arrays.asList(caseTypes).contains("MAPPER")) {
-                roleAssignments.add(mapperCTSpecificPublicUserRoleAssignmentJson(userId, "idam:caseworker-autotest1",
-                    "1588870615652827"));
+                roleAssignments.add(mapperCTSpecificPublicUserRoleAssignmentJson(userId,
+                    "idam:caseworker-autotest1","1588870615652827"));
             }
 
             if (Arrays.asList(caseTypes).contains("RESTRICTED_SECURITY")) {
